Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/Test_Run__c.object-meta.xml
<CustomObject>
    <description>The execution of the test script.</description>
    <label>Test Run</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Test Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Runs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>