Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Overall_Test_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overall_Test_Comments__c</fullName>
    <label>Overall Test Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>