Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Percent_Passed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Passed__c</fullName>
    <formula>Steps_Passed__c / Total_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Passed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>