Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>