Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sprint</label>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>