Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Steps_Passed__c.field-meta.xml
<CustomField>
    <fullName>Steps_Passed__c</fullName>
    <label>Steps Passed</label>
    <summaryFilterItems>
        <field>Test_Run_Step__c.Status__c</field>
        <operation>equals</operation>
        <value>Passed, Passed with comments</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Run_Step__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>