Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Test_Completion__c.field-meta.xml
<CustomField>
    <fullName>Test_Completion__c</fullName>
    <formula>Steps_Completed__c / Total_Steps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Completion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>