Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <label>Test Script</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipName>Test_Executions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>