Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Tester__c.field-meta.xml
<CustomField>
    <fullName>Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>