Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <label>Total Steps</label>
    <summaryForeignKey>Test_Run_Step__c.Test_Run__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>