Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Peer-Review</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Regression</fullName>
            </value>
            <value>
                <fullName>Usability</fullName>
            </value>
            <value>
                <fullName>User Interface</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>