Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>User_Story__c</referenceTo>
    <relationshipName>Test_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>