Dummy_Package_for_scratch_org/main/default/objects/Test_Run__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Tester__c</columns>
    <columns>Type__c</columns>
    <columns>User_Story__c</columns>
    <columns>Steps_Passed__c</columns>
    <columns>Test_Completion__c</columns>
    <columns>Status__c</columns>
    <columns>Overall_Test_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>